resolved pip install warning

--- a/Deep_Learning_1.ipynb
+++ b/Deep_Learning_1.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade intel-extension-for-tensorflow[xpu]"
+    "%pip install --upgrade intel-extension-for-tensorflow[xpu]"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pandas numpy matplotlib seaborn scikit-learn tensorflow keras\n"
+    "%pip install pandas numpy matplotlib seaborn scikit-learn tensorflow keras\n"
    ]
   },
   {
